--- a/style.css
+++ b/style.css
@@ -170,6 +170,7 @@ nav ul li:nth-child(4) {
 
 #curriculum .cards .card {
     display: flex;
+    box-shadow: inset 0 0 28.3px rgba(0, 0, 0, 0.05);
     flex-direction: column;
     align-items: center;
     padding: 54px 40px;
